2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/sample.py: replaceSystematic() function (HISTFITTER-21)

2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/histfitter/plotting/systematicsplotter.py: check file existence;
	put sample name in canvas title

2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Tagging HistFitter-00-00-53

2016-07-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/plotUpDown.py: pythonic and modular version of the macro
	plotUpDown.C but with easy settings
	* new module python/histfitter: module directory for modules to be
	imported in our utility scripts. New plotUpDown.py relies on one module
	inside this.

2016-07-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* channel.py, configManager.py, sample.py, systematic.py: modifications to
	allow for new systematic types "normHistoSysEnvelopeSym",
	"histoSysEnvelopeSym", "overallNormHistoSysEnvelopeSym". These look at the
	bin content of the histogram and set the error to max(nom-low, high-nom);
	i.e. high' = nom + max(abs(nom-low), abs(high-nom)) and similar for low.
	Such types did not exist yet.
	* Same files: Added additional verbose statements to clarify what's going on to aid the
	user. 

2016-07-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/TEasyFormula.h: inherit from ROOT::v5::TFormula to ensure that our
	cutStr still works properly

2016-06-09 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: add model-dep and model-indep fit types as
	aliases of excl and disc
	* scripts/HistFitter.py: detect whether the input file exists and is a
	file _before_ calling execFile

2016-06-08 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/channel.py: addSample() would use the index of the last sample to
	check systematics, even if you specified an index. Now fixed. 

2016-06-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/configMgr.cxx: add stop condition for UL range extending at 5x